# gptcli

./: .gitignore  Cargo.toml  README.md  env.example  languages.toml
src/: appconfig.rs  context.rs  db.rs  fs.rs  main.rs  state.rs
src/commands/: budget.rs  chunk.rs  config_cmd.rs  explain.rs  index.rs  init.rs  mod.rs  oneshot.rs  reindex_changed.rs  scan.rs  set_cmd.rs  stats.rs  summarize.rs  whoami.rs
